[package]
name = "swim-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
dashmap = "6.1.0"
lazy_static = "1.5.0"
prost = "0.13.3"
rand = "0.8.5"
snafu = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = {version = "1.10.0", features = ["v4"]}

[build-dependencies]
prost-build = "0.13.3"
