[package]
name = "swim-rs"
version = "0.1.0"
authors = ["Marvin Lanhenke"]
edition = "2021"
rust-version = "1.80.0"
categories = ["network-programming", "data-structures"]
readme = "README.md"
description = "Rust implementation of the SWIM protocol"
repository = "https://github.com/marvinlanhenke/swim-rs"
homepage = "https://github.com/marvinlanhenke/swim-rs"
documentation = "https://docs.rs/swim-rs"
license = "Apache-2.0"
keywords = ["swim", "protocol", "distributed", "gossip"]

[dependencies]
async-trait = "0.1.83"
dashmap = "6.1.0"
lazy_static = "1.5.0"
prost = "0.13.3"
rand = "0.8.5"
snafu = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
prost-build = "0.13.3"
